# python-neural-network

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  basic_forward_pass.py  pyproject.toml  requirements.txt
nnfsip/: final.py
src/: activations.py  constants.py  layer.py  spiral.py
src/activations/: __init__.py  activation.py  base.py  numpy.py  numpy_activation.py
src/sample_data/: X.json  spiral.py  y.json
src/tensors/: __init__.py  axes.py  backend.py  numpy_backend.py  python_backend.py  python_design.md  tensor_backend.py  validation.py
tests/: _fixture_with_assert_nested_close.py  _fixture_without_assert_nested_close.py  test_activations.py  test_shared_tests_enforcement.py  test_tensor_assertions.py  test_tensor_helpers.py
tests/helpers/: shared_tests_enforcement.py  tensor_assertions.py  tensor_helpers.py
tests/python_tensor/: test_python_tensor.py
tests/tensors/: backend_contract.py  backend_contract_argmax.py  backend_contract_base.py  backend_contract_composition.py  backend_contract_creation.py  backend_contract_elementwise.py  backend_contract_matmul.py  backend_contract_randn.py  backend_contract_reduction.py  backend_contract_reshape.py  backend_contract_shared.py  backend_contract_to_python.py  backend_contract_to_tensor.py  backend_contract_transpose.py  backend_contract_unary.py  backend_reference_creation.py  backend_reference_elementwise.py  backend_reference_matmul.py  backend_reference_randn.py  backend_reference_reduction.py  backend_reference_unary.py  test_numpy_backend.py  test_python_backend.py  (+2 more)
(+2 files in other folders)
